# multi-agent-coordination-framework

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  coordination-tech-stack.md  pyproject.toml
cli/: .gitignore  README.md  breakers.py  config.json  config.py  ledger.py  orchestrator.py  parsing.py  prompts.py  repair.py  requirements.txt  resolution.py  retry.py  review.py  roles.py  schema.py  signals.py  synthesis.py
cli/participants/declarations/: claude-sonnet.json  gpt-4o.json  human-lead.json
cli/scope/code/: example_auth.py
cli/tests/: test_orchestrator.py
foundations/: fnd-failure.md  fnd-field.md  fnd-ledger.md  fnd-participants.md  fnd-preamble.md  fnd-repair.md  fnd-signal.md
hermes/: .gitignore  CLAUDE.md  README.md  SKILL.md  coordination.yaml  daemon.py  ledger-entry.schema.json  participant-declaration.schema.json  participants.yaml
