[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "multi-agent-coordination-framework"
version = "0.4.0"
description = "CLI orchestrator for the Multi-Agent Coordination Framework"
readme = "cli/README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.50.0",
    "pydantic>=2.0",
    "gitpython>=3.1",
    "rich>=13.0",
    "filelock>=3.0",
]

[project.scripts]
orchestrator = "cli.orchestrator:main"

[tool.setuptools.packages.find]
include = ["cli*"]

[tool.pytest.ini_options]
testpaths = ["cli/tests"]
